<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <TextView
        android:id="@+id/article_heading2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#F08519"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp"
        android:text="@string/article_title2"
        android:gravity="center"
        android:textAppearance="@android:style/TextAppearance.Medium"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/article_subheading2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/article_heading2"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp"
        android:text="@string/article_subtitle0"
        android:textAppearance="@android:style/TextAppearance"
        android:textStyle="bold" />

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="wrap_content"
        android:layout_height="309dp"
        android:layout_above="@+id/btnback2"
        android:layout_below="@id/article_subheading2"
        android:background="#FFFFFF" >
		
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="309dp"
            android:layout_margin="6dp"
            android:background="#FFFFFF">

            <TextView
                android:id="@+id/article"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="5sp"
                android:text="@string/article_text20" />
            <TextView
			    android:id="@+id/article2"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_below="@+id/article"
                android:lineSpacingExtra="4sp"
			    android:text="@string/article_text21"
			    android:textStyle="bold"/>
			<TextView
                android:id="@+id/article3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/article2"
                android:textSize="14sp"
                android:lineSpacingExtra="-4sp"
                android:text="@string/article_text22" />
			
        </RelativeLayout>
    </ScrollView>

    <Button
        android:id="@+id/btnback2"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_alignLeft="@+id/scrollView1"
        android:layout_marginTop="3dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/back" />

</RelativeLayout>